# sdl-test

./: .gitignore  CMakeLists.txt  LICENSE  README.md
assets/glsl/: fragment.glsl  vertex.glsl
src/: app.cpp  app.h  camera.cpp  camera.h  glsl.cpp  glsl.h  main.cpp  texture.cpp  texture.h  vao.cpp  vao.h
